--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -42,7 +42,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808602.md#1">中国百年名校纷纷沦陷 校章被迫加“党领导”</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808116.md#1">【新闻看点】一关键因素 孟晚舟被引渡概率增</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808530.md#1">杨宁：新冠状病毒在扩散 中南海能躲过？</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">贵阳大连现疑似病例 武汉肺炎扩散9省2市</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">贵阳大连现疑似病例 武汉肺炎扩散11省区市</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809332.md#1">程晓容：习近平要遏制武汉疫情 病毒源头何在</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809498.md#1">传上海再添肺炎病例 嘉里中心：疑似肺结核</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809403.md#1">涉钱色交易 吉林白城原政法委书记被双开</a><br>
@@ -53,7 +53,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809168.md#1">中国春运人潮涌现 武汉肺炎疫情扩散风险增</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809138.md#1">SARS阴影犹在 香港对武汉肺炎提高警觉</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809034.md#1">武汉肺炎恐波及全球 世卫组织将开紧急会议</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808789.md#1">中共开放坏账市场 分析师：投资人应小心</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808789.md#1">中共开放坏帐市场 分析师：投资人应小心</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808988.md#1">安徽宿松现亚硝酸盐事件 1死17人中毒</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808890.md#1">武汉15医护者被感染 上海确诊一宗新个案</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808076.md#1">被郑恺抢答当妈比拍戏更辛苦 赵丽颖一脸尴尬</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,214,150 人
+- 共 350,219,072 人
 ```
 </strong>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
