--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,13 +2,14 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809515.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1O242V-320x200.jpg">中共前公安部副部长孟宏伟被判13年半</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805480.md#1">武汉到底有多少人死于新型冠状病毒？</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801219.md#1">大陆多座城市医院启动一级防护 传医护中招</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1">习议“领导更替” 美媒：北京陷接班人怪圈</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809863.md#1">陈思敏：武汉新型肺炎特点 中国专家说的与没说的</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808445.md#1">中共从崛起到收敛：美中贸谈说明了什么？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808910.md#1">荒猫：中美双赢</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808840.md#1">谢燕益：新型SARS疫情信息公开申请书</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806197.md#1">程晓容：香港“天下制裁”集会为何被中止？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">【思想领袖】陈日君：港府只是一个傀儡</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805764.md#1">诸葛次郎：为庚子年的香港祈祷</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805741.md#1">谭笑飞：中美协议加速中共解体</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -42,7 +42,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808602.md#1">中国百年名校纷纷沦陷 校章被迫加“党领导”</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808116.md#1">【新闻看点】一关键因素 孟晚舟被引渡概率增</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808530.md#1">杨宁：新冠状病毒在扩散 中南海能躲过？</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">贵阳大连现疑似病例 武汉肺炎扩散11省区市</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">武汉肺炎再扩散 贵阳大连现疑似病例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809332.md#1">程晓容：习近平要遏制武汉疫情 病毒源头何在</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809498.md#1">传上海再添肺炎病例 嘉里中心：疑似肺结核</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809403.md#1">涉钱色交易 吉林白城原政法委书记被双开</a><br>
