--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809933.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1194134345-320x200.jpg">武汉开始封城 千万人口仅61家发热门诊</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-320x200.jpg">【持续更新】武汉肺炎速扩20省市 台首现1例</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805480.md#1">武汉到底有多少人死于新型冠状病毒？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
@@ -10,6 +10,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805440.md#1">故宫奔驰女被爆：戴千万名表 住北京豪宅</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809863.md#1">陈思敏：武汉新型肺炎特点 中国专家说的与没说的</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806338.md#1">王赫：“人民领袖”捧杀习近平？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808445.md#1">中共从崛起到收敛：美中贸谈说明了什么？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808910.md#1">荒猫：中美双赢</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808840.md#1">谢燕益：新型SARS疫情信息公开申请书</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807999.md#1">王友群：盘点被美国制裁的高官及其家人</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808064.md#1">蜀笑笑：论合法</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806197.md#1">程晓容：香港“天下制裁”集会为何被中止？</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">【思想领袖】陈日君：港府只是一个傀儡</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,18 +30,18 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810364.md#1">武汉肺炎 天津重庆河南沦陷 黄冈新增12例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810222.md#1">武汉肺炎冲击港股 恒指下挫810点</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809933.md#1">武汉开始封城 千万人口仅61家发热门诊</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809123.md#1">【翻墙必看】护士被调前线 武汉疫情有多严重</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810092.md#1">乌航客机被击落 伊朗承认发射了2枚导弹</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810001.md#1">武汉肺炎急速蔓延 专家：“毒王”或已出现</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809922.md#1">川普：美中协议开启21世纪贸易新模式</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809332.md#1">程晓容：习近平要遏制武汉疫情 病毒源头何在</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809515.md#1">中共前公安部副部长孟宏伟被判13年半</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809339.md#1">武汉肺炎确定人传人 中共瞒不住惟三易其口</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809339.md#1">武汉肺炎爆发 中共瞒不住 三易其口</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807613.md#1">武汉未婚护士被抽调支援呼吸科 网民：不公平</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808930.md#1">【拍案惊奇】武汉肺炎或更重 此刻还需蒋彦永</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806338.md#1">王赫：“人民领袖”捧杀习近平？</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808274.md#1">中共大使向德企集资无果 形象工程告吹</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808152.md#1">辽宁女子监狱李文博迫害法轮功学员的恶行</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809808.md#1">武汉肺炎扩散16省市达291宗死亡6例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">武汉肺炎再扩散 贵阳大连现疑似病例</a><br>
@@ -49,7 +49,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809403.md#1">涉钱色交易 吉林白城原政法委书记被双开</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809317.md#1">出现武汉肺炎疑似病例 澳洲将对武汉旅客筛检</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809014.md#1">中国武汉肺炎确诊病例超200例 包括孕妇</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【持续更新】武汉肺炎速扩20省市 台首现1例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809025.md#1">武汉肺炎爆发 台医生示警传染力比萨斯强</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809168.md#1">中国春运人潮涌现 武汉肺炎疫情扩散风险增</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809138.md#1">SARS阴影犹在 香港对武汉肺炎提高警觉</a><br>
@@ -64,6 +63,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808545.md#1">武汉肺炎病例暴增 你需要了解的10件事</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808682.md#1">武汉肺炎患者激增 培训机构停课有企业停工</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808739.md#1">武汉肺炎人传人 春运期防疫恐比萨斯严峻</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808274.md#1">中共大使向德企集资无果 形象工程告吹</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808546.md#1">GDP“保6”不易 学者：大陆经济面临6大难题</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808648.md#1">首位在华外国人染肺炎 印度籍教师深圳住院</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808595.md#1">武汉肺炎急速扩大 民众批政府此前瞒报疫情</a><br>
