--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -32,7 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810364.md#1">武汉肺炎 天津重庆河南沦陷 黄冈新增12例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810222.md#1">武汉肺炎冲击港股 恒指下挫810点</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809933.md#1">武汉开始封城 千万人口仅61家发热门诊</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809933.md#1">武汉开始“封城” 千万人口仅61家发热门诊</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809123.md#1">【翻墙必看】护士被调前线 武汉疫情有多严重</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810092.md#1">乌航客机被击落 伊朗承认发射了2枚导弹</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810001.md#1">武汉肺炎急速蔓延 专家：“毒王”或已出现</a><br>
